--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </div>
 
 
-    <script type="module" src="solar.js"> 
+    <script type="module" src="solar_sys.js"> 
     </script>
 </body>
 
